Read CPU frequency from /proc/cpuinfo

--- a/metricbeat/module/sensor/_meta/fields.yml
+++ b/metricbeat/module/sensor/_meta/fields.yml
@@ -9,3 +9,8 @@
       description: >
         lm sensors metrics
       fields:
+    - name: procfs
+      type: group
+      description: >
+        procfs metrics
+      fields:
